appId: dev.ipf.whitenoise.android.maestrolab
---
- assertVisible:
    id: appearance.theme.group
- scrollUntilVisible:
    element:
      text: Chat bubble colors
    direction: DOWN
- tapOn: Chat bubble colors
- assertVisible:
    id: bubble_colors.mine.picker
